--- a/src/ui/marker/marker.css
+++ b/src/ui/marker/marker.css
@@ -1,35 +1,42 @@
 :root {
   --marker-size: 32px;
+  --shadow-height: 16px;
+  --shadow-bottom: -14px;
 }
 
 .marker {
   position: absolute;
-  top: 50%;
-  left: 50%;
 
   width: var(--marker-size);
   height: var(--marker-size);
 
-  margin: -20px 0 0 -20px;
+  margin-top: -35px;
+  margin-left: calc(-1 * var(--marker-size) / 2);
+}
+
+.pointer {
+  height: var(--marker-size);
 
   cursor: pointer;
   transform: rotate(-45deg);
 
+  border: 2px solid var(--white);
   border-radius: 50% 50% 50% 0;
-  background: var(--green);
+  background: var(--white);
 }
 
-.marker::after {
+.pointer::after {
   position: absolute;
+
+  top: calc(var(--marker-size) / 4 - 2px);
+  left: calc(var(--marker-size) / 4 - 2px);
 
   width: calc(var(--marker-size) / 2);
   height: calc(var(--marker-size) / 2);
-  margin: 8px 0 0 8px;
 
   content: "";
 
   border-radius: 50%;
-
   background: var(--black);
 }
 
@@ -37,14 +44,11 @@
   position: absolute;
 
   z-index: -2;
-  top: 50%;
-  left: 50%;
+  bottom: var(--shadow-bottom);
+  left: 0;
 
   width: var(--marker-size);
-  height: calc(var(--marker-size) / 2);
-  margin: 11px 0 0 calc(-1 * var(--marker-size) / 2);
-
-  transform: rotateX(55deg);
+  height: var(--shadow-height);
 
   opacity: .7;
 
@@ -52,18 +56,23 @@
   background: var(--black);
 }
 
-.shadow--is-active::after {
-  content: "";
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  position: absolute;
-  margin: -13px 0 0 -13px;
+.marker--is-active .pointer {
+  background: var(--black);
+}
+
+.marker--is-active .pointer::after {
+  background: var(--white);
+}
+
+.marker--is-active .shadow {
   animation: pulsate 1s ease-out;
-  animation-iteration-count: infinite;
-  opacity: 0;
-  box-shadow: 0 0 1px 2px var(--green);
   animation-delay: 1.1s;
+  animation-iteration-count: infinite;
+
+  opacity: 0;
+
+  border-radius: 50%;
+  background: var(--white);
 }
 
 @keyframes pulsate {
@@ -78,7 +87,7 @@
   }
 
   100% {
-    transform: scale(1.2, 1.2);
+    transform: scale(1.5, 1.5);
 
     opacity: 0;
   }
