--- a/src/ui/sidemenu/sidemenu.css
+++ b/src/ui/sidemenu/sidemenu.css
@@ -18,14 +18,14 @@
   text-align: center;
   vertical-align: middle;
 
-  color: var(--black);
+  color: var(--color-black);
   border: var(--link-border) solid transparent;
-  background-color: var(--white);
+  background-color: var(--color-white);
 
   line-height: var(--link-size);
 }
 
 .link--is-active {
-  color: var(--black);
-  background-color: var(--green);
+  color: var(--color-black);
+  background-color: var(--color-primary);
 }
