Pass through state slices and show API interaction. Add SettingsList and load data on mount. Add create POI handler - after create switch to edit page

--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -1,8 +1,18 @@
+.hud {
+  z-index: var(--z-index-higher);
+}
+
+.under {
+  z-index: var(--z-index-normal);
+}
+
 .content {
   position: fixed;
 
   top: 0;
   left: 64px;
 
-  background-color: var(--white);
+  padding: var(--distancer);
+
+  background-color: var(--color-white);
 }
